--- a/README.me
+++ b/README.me
@@ -2,6 +2,8 @@ Set up
 
 npm i
 docker compose up
+npx prisma generate
+npx prisma migrate dev
 npm run dev
 
-todo:
+need to fix: but requires account userid to be admin to have post /review working
